Fixing z-index animation problem

--- a/src/slider/slider.css
+++ b/src/slider/slider.css
@@ -21,7 +21,7 @@
     position: absolute;
     background: red;
     height:100%;
-    transition: transform 0.3s ease-in, display 0.3s 0s, opacity 0.3s ease-in;
+    transition: transform 0.3s ease-in, display 0.3s 0s, opacity 0.3s ease-in, z-index 0.3s ease-in;
     transform: translateX(0) scale(75%);
     z-index: -1;
     opacity: 0;
